--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			Margin: 0;
 			margin: 0;
 			padding: 0;
-			background-color: var(--backroundColor);
+			background-color: #F8F3ED;
 		}
 		table {
 			border-spacing: 0;
@@ -33,7 +33,7 @@
             max-width: 600px;
             margin: 0 auto;
             width: 100%;
-            background-color: var(--emailBackgroundColor);
+            background-color: #EFE6D7;
         }
         .wrapper{
             max-width: 500px;
@@ -44,9 +44,9 @@
             text-decoration: none;
         }
         .btn{
-            color: var(--color1);
+            color: #873448;
             background-color: transparent;
-            border: 1px solid var(--color1);
+            border: 1px solid #873448;
             padding: 15px 26px;
         }
         .three-column{
@@ -133,7 +133,7 @@
                 <table class="wrapper">
                     <tr>
                       <td height="100" style="text-align: center;">
-                        <a href="#"><img src="images3/Logo.png" 
+                        <a href="#"><img src="https://i.ibb.co/R4SC9dz/Logo.png" 
                             alt="Logo" title="logo"></a>
                       </td>
                     </tr>
@@ -147,15 +147,15 @@
                 <table width="100%">
                    <tr>
                      <td>
-                        <img src="images3/fun0.png" 
+                        <img src="https://i.ibb.co/JcfT8d5/fun0.png" 
                         alt="Banner" title="banner" width="100%"
                         style="max-width: 600px;">
-                        <p class="strongC" style="font-size: 28px; font-weight: bold; color: var(--color2); text-align: center; position: relative; bottom: 320px; right: 130px;"><strong style="color: var(--color1);">FALL</strong> IN LOVE<br>
-                        <span style="font-size: 15px; color: var(--color3);" class="spanC">with this season's collection</span></p>
+                        <p class="strongC" style="font-size: 28px; font-weight: bold; color: #6B3B51; text-align: center; position: relative; bottom: 320px; right: 130px;"><strong style="color: #873448;">FALL</strong> IN LOVE<br>
+                        <span style="font-size: 15px; color: #3B3A36;" class="spanC">with this season's collection</span></p>
                         <table class="wrapper">
                             <tr>
                               <td style="text-align: center; padding-bottom: 40px;">
-                                <p style="font-size: 15px; color: var(--color3); padding-bottom: 20px;">
+                                <p style="font-size: 15px; color: #3B3A36; padding-bottom: 20px;">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facere 
                                     pariatur iusto autem minus delectus fugit eos tempore nostrum 
                                     aliquid aliquam nobis, aperiam a dolore praesentium, nam eligendi 
@@ -177,7 +177,7 @@
                 <table class="wrapper">
                     <tr>
                       <td>
-                        <p style="font-size: 20px; color: var(--color3); text-align: center; padding-bottom: 60px;">FEATURED SEATING</p>
+                        <p style="font-size: 20px; color: #3B3A36; text-align: center; padding-bottom: 60px;">FEATURED SEATING</p>
                         <table width="100%" style="padding-bottom: 70px;">
                             <tr>
                               <td class="three-column">
@@ -186,13 +186,13 @@
                                       <td style="text-align: center;">
                                         <table>
                                             <tr>
-                                              <td class="box" width="150px" height="160px" style="background-color: var(--cardColor);">
-                                                <a href="#"><img src="images3/fun2.png" 
+                                              <td class="box" width="150px" height="160px" style="background-color: #FFFFFF;">
+                                                <a href="#"><img src="https://i.ibb.co/5csT18R/fun2.png" 
                                                     alt="image" title="image" width="150"></a>
                                               </td>
                                             </tr>
                                         </table>
-                                        <p style="font-size: 15px; color: var(--color3);">Breakfast Chair<br><strong>Ksh 4000</strong></p>
+                                        <p style="font-size: 15px; color: #3B3A36;">Breakfast Chair<br><strong>Ksh 4000</strong></p>
                                       </td>
                                     </tr>
                                 </table>
@@ -201,13 +201,13 @@
                                       <td style="text-align: center;">
                                         <table>
                                             <tr>
-                                              <td class="box" width="150px" height="160px" style="background-color: var(--cardColor);">
-                                                <a href="#"><img src="images3/fun3.png" 
+                                              <td class="box" width="150px" height="160px" style="background-color: #FFFFFF;">
+                                                <a href="#"><img src="https://i.ibb.co/qp5FWnm/fun3.png" 
                                                     alt="image" title="image" width="150"></a>
                                               </td>
                                             </tr>
                                         </table>
-                                        <p style="font-size: 15px; color: var(--color3);">Grey Accent Chair<br><strong>Ksh 4000</strong></p>
+                                        <p style="font-size: 15px; color: #3B3A36;">Grey Accent Chair<br><strong>Ksh 4000</strong></p>
                                       </td>
                                     </tr>
                                 </table>
@@ -216,13 +216,13 @@
                                       <td style="text-align: center;">
                                         <table>
                                             <tr>
-                                              <td class="box" width="150px" height="160px" style="background-color: var(--cardColor);">
-                                                <a href="#"><img src="images3/fun4.png" 
+                                              <td class="box" width="150px" height="160px" style="background-color: #FFFFFF;">
+                                                <a href="#"><img src="https://i.ibb.co/KGGwW7j/fun4.png" 
                                                     alt="image" title="image" width="150"></a>
                                               </td>
                                             </tr>
                                         </table>
-                                        <p style="font-size: 15px; color: var(--color3);">Orange Shell Chair<br><strong>Ksh 4000</strong></p>
+                                        <p style="font-size: 15px; color: #3B3A36;">Orange Shell Chair<br><strong>Ksh 4000</strong></p>
                                       </td>
                                     </tr>
                                 </table>
@@ -241,12 +241,12 @@
                 <table class="wrapper">
                     <tr>
                       <td style="text-align: center;">
-                        <p style="font-size: 20px; font-weight: bold; color: var(--color3); padding-bottom: 50px;">BROWSE DECOR SETS</p>
+                        <p style="font-size: 20px; font-weight: bold; color: #3B3A36; padding-bottom: 50px;">BROWSE DECOR SETS</p>
                         <table width="100%">
                             <tr>
                               <td style="padding-bottom: 100px;">
-                                <div class="decoBox" width="100%" height="143px" style="background-color: var(--cardColor); margin-bottom: 30px;">
-                                    <img src="images3/fun5.png" 
+                                <div class="decoBox" width="100%" height="143px" style="background-color: #FFFFFF; margin-bottom: 30px;">
+                                    <img src="https://i.ibb.co/zNMD0S7/fun5.png" 
                                     alt="Image" title="Decor" width="100%" style="max-width: 443px;">
                                 </div>
                                 <a href="#" class="btn">Shop Now</a>
@@ -268,7 +268,7 @@
                         <!-- first Column cushons -->
                         <table class="cushon-column">
                             <tr>
-                             <td style="background-color: var(--cardColor);">
+                             <td style="background-color: #FFFFFF;">
                                 
                             <table class="cushonName" style="padding: 15px 63px 18px 63px;">
                                 <tr>
@@ -280,7 +280,7 @@
                             <table class="cushonImg" style="padding-bottom: 15px;">
                                 <tr>
                                 <td>
-                                    <img src="images3/cushon.png" alt=""> 
+                                    <img src="https://i.ibb.co/p1V5kk1/cushon.png" alt=""> 
                                 </td>
                                 </tr>
                             </table> 
@@ -294,14 +294,14 @@
                             <table style="padding-left: 47px; padding-right: 48px; padding-bottom: 15px;">
                                 <tr>
                                   <td>
-                                    <p style="font-size: 20px; color: var(--color3);">SIDE TABLES</p>
+                                    <p style="font-size: 20px; color: #3B3A36;">SIDE TABLES</p>
                                   </td>
                                 </tr>
                             </table>
                             <table style="padding-left: 19px; padding-right: 20px; padding-bottom: 22px;">
                                 <tr>
                                   <td>
-                                    <img src="images3/woodTable.png" alt="">
+                                    <img src="https://i.ibb.co/ZHjPcvs/wood-Table.png" alt="">
                                   </td>
                                 </tr>
                             </table>
@@ -319,18 +319,18 @@
                         <!-- Second Column Living Room -->
                         <table class="livingRoom-column">
                             <tr>
-                              <td style="background-color: var(--cardColor);">
+                              <td style="background-color: #FFFFFF;">
                                 <table style="padding: 15px 46px 13px 46px;">
                                     <tr>
                                       <td>
-                                        <p style="font-size: 18px; font-weight: bold; color: var(--color3);">LIVING ROOM</p>
+                                        <p style="font-size: 18px; font-weight: bold; color: #3B3A36;">LIVING ROOM</p>
                                       </td>
                                     </tr>
                                 </table>
                                 <table style="padding-bottom: 74px;">
                                     <tr>
                                       <td>
-                                        <img src="images3/right1.png" alt="">
+                                        <img src="https://i.ibb.co/BV1GqBs/right1.png" alt="">
                                       </td>
                                     </tr>
                                 </table>
@@ -358,7 +358,7 @@
                     <tr>
                       <td style="text-align: center; padding-bottom: 40px;">
                         <p style="font-size: 20px; font-weight: bold; padding-bottom: 20px;">REIMAGING THE CLASSICS</p>
-                        <p style="font-size: 15px; color: var(--color3); padding-bottom: 16px;">
+                        <p style="font-size: 15px; color: #3B3A36; padding-bottom: 16px;">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facere 
                             pariatur iusto autem minus delectus fugit eos tempore nostrum 
                             aliquid aliquam nobis, aperiam a dolore praesentium, nam eligendi 
@@ -374,7 +374,7 @@
             <!-- banner bottom -->
             <tr>
                <td style="text-align: center; padding-bottom: 32px;">
-                <img src="images3/fun-last0.png" 
+                <img src="https://i.ibb.co/dD5X0hT/fun-last0.png" 
                 alt="banner" title="banner" width="100%" 
                 style="max-width: 600px;">
                </td>
@@ -386,16 +386,16 @@
                 <table class="wrapper">
                     <tr>
                       <td style="text-align: center;">
-                        <a href="#"><img src="images3/Logo.png" 
+                        <a href="#"><img src="https://i.ibb.co/R4SC9dz/Logo.png" 
                             alt="Logo" title="Logo"></a>
                         <table width="100%">
                             <tr>
                               <td>
-                                <a href="#"><img src="images3/facebook.png" alt="facebook" title="facebook" width="30" style="padding: 10px;"></a>
-                                <a href="#"><img src="images3/twitter.png" alt="twitter" title="twitter" width="30" style="padding: 10px;"></a>
-                                <a href="#"><img src="images3/youtube.png" alt="youtube" title="youtube" width="30" style="padding: 10px;"></a>
-                                <a href="#"><img src="images3/Linkedin.png" alt="Linkedin" title="Linkedin" width="30" style="padding: 10px;"></a>
-                                <a href="#"><img src="images3/instagram.png" alt="instagram" title="instagram" width="30" style="padding: 10px;"></a>
+                                <a href="#"><img src="https://i.ibb.co/bX2Rh6C/facebook.png" alt="facebook" title="facebook" width="30" style="padding: 10px;"></a>
+                                <a href="#"><img src="https://i.ibb.co/cQWr4dB/twitter.png" alt="twitter" title="twitter" width="30" style="padding: 10px;"></a>
+                                <a href="#"><img src="https://i.ibb.co/kmFwhnR/youtube.png" alt="youtube" title="youtube" width="30" style="padding: 10px;"></a>
+                                <a href="#"><img src="https://i.ibb.co/6tTTrpC/Linkedin.png" alt="Linkedin" title="Linkedin" width="30" style="padding: 10px;"></a>
+                                <a href="#"><img src="https://i.ibb.co/kXjLDpw/instagram.png" alt="instagram" title="instagram" width="30" style="padding: 10px;"></a>
                               </td>
                             </tr>
                         </table>
